# aiXplain

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.ar.md  AGENTS.md  README.ar.md  README.md  agenttest.py  airv2.py  generate.py  generate_llms_full.py  pipeline_test.py  pipeline_test2.ipynb  post_process_docs.py  pydoc-markdown.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py  test.py  test_agent_eval.py
.github/workflows/: docs.yaml  generate_pipeline.yaml  main.yaml  pre-commit.yaml  python-test.yml  run_functional_tests.yaml  run_functional_tests.yml  run_unit_tests.yaml  test.yaml  v2_testing_automation.yml
Desktop/aixplain/: agent.py  is_yerine_basvuru_ve_kabul_formu.doc  saglik_hizmeti_alan.doc  tempCodeRunnerFile.py  testingSDK.py
aixplain/: __init__.py  __version__.py  _compat.py  cli_groups.py  cli_runner.py  client.py  config.py  enums.py  env.py  utils.py
aixplain/api/: README.md  __init__.py  __main__.py  base.py  enums.py  mixins.py  nodes.py  pipeline.py  pipeline_base.py  pipeline_gen.py
aixplain/assets/: __init__.py  base.py  datasets.py  files.py  models.py
aixplain/base/: parameters.py
aixplain/decorators/: api_key_checker.py
aixplain/enums/: __init__.py  aixplain_cache.py  asset_cache.py  asset_status.py  cache_utils.py  code_interpeter.py  code_interpreter.py  data_split.py  data_subtype.py  data_type.py  database_source.py  embedding_model.py  error_handler.py  evolve_type.py  file_type.py  function.py  function_type.py  generated_enums.py  index_stores.py  index_type.py  language.py  license.py  model_status.py  onboard_status.py  ownership_type.py  privacy.py  response_status.py  sort_by.py  sort_order.py  splitting_options.py  status.py  storage_type.py  supplier.py
aixplain/exceptions/: __init__.py  error_handler.py  registry.py  types.py
aixplain/factories/: APIkeyfactory.py  __init__.py  api_key_factory.py  asset_factory.py  benchmark_factory.py  corpus_factory.py  data_factory.py  dataset_factory.py  file_factory.py  finetune_factory.py  guardrail_factory.py  index_factory.py  index_model_factory.py  integration_factory.py  labelstudio_factory.py  metric_factory.py  model_factory.py  model_factory_cli.py  pipeline_factory.py  pipeline_output_factory.py  script_factory.py  tool_factory.py  wallet_factory.py  wallet_factoy.py
aixplain/modules/: __init__.py  api_key.py  asset.py  asset_router.py  benchmark.py  benchmark_job.py  content_interval.py  corpus.py  cost.py  data.py  dataset.py  document_index.py  file.py  finetune.py  finetune_cost.py  labelstudio_data.py  metadata.py  metric.py  mixins.py  model.py  model_response.py  pipeline.py  pipeline_response.py  wallet.py
aixplain/outputs/: __init__.py
aixplain/utils/: __init__.py  asset_cache.py  cache_utils.py  config.py  convert_datatype_utils.py  evolve_utils.py  file_utils.py  llm_utils.py  request_utils.py  user_info_utils.py  validation_utils.py
aixplain/v1/: __init__.py
aixplain/v2/: __init__.py  actions.py  agent.py  agent_evaluator.py  agent_progress.py  api_key.py  auth_utils.py  automode.py  benchmark.py  client.py  code_utils.py  connection.py  core.py  corpus.py  data.py  dataset.py  deprecation.py  enums.py  enums_include.py  eval_experiment.py  eval_results_display.py  exceptions.py  file.py  finetune.py  index.py  inspector.py  integration.py  issue.py  meta_agents.py  metric.py  mixins.py  model.py  params.py  pipeline.py  resource.py  rlm.py  script.py  session.py  skill.py  team_agent.py  (+4 more)
aixplain_pipelines/: __init__.py  __version__.py  aixplain_pipelines.py  execution.py
aixplain_pipelines/utils/: config.py
aixplain_sdk/factories/: model_factory.py  pipeline_factory.py
aixplain_sdk/modules/: model.py  pipeline.py
aixplain_sdk/utils/: config.py
aixplain_v2/: __init__.py  agent.py  base.py  client.py  core.py  enums.py  enums_include.py
aixtend/: __init__.py  __version__.py
aixtend/enums/: __init__.py  data_split.py  data_type.py  file_type.py  function.py  language.py  license.py  privacy.py  storage_type.py
aixtend/factories/: __init__.py  asset_factory.py  benchmark_factory.py  corpus_factory.py  data_asset_factory.py  dataset_factory.py  file_factory.py  metric_factory.py  model_factory.py  pipeline_factory.py
aixtend/modules/: asset.py  benchmark.py  benchmark_job.py  corpus.py  data.py  dataset.py  datasets.py  file.py  metadata.py  metric.py  model.py  pipeline.py
aixtend/processes/: data_onboarding.py  process_audio_files.py  process_text_files.py
aixtend/utils/: config.py  file_handler.py  file_utils.py
docs/: LLMS.md  README.ar.md  README.md  error_handling.md  llms-full.txt  llms.txt
docs/assets/: subtitle-generator-output.json
docs/development/: developer_guide.md
docs/docstring/: aixtend.factories.md  aixtend.md  aixtend.modules.md  aixtend.utils.md  index.md  modules.md  tests.md
docs/rfcs/: rfc-test-cleanup-refactoring.ar.md  rfc-test-cleanup-refactoring.md
docs/samples/: README.md  subtitle_generator.py
docs/streaming/: README.md  aixplain_diarization_streaming_client.py  aixplain_speech_transcription_streaming_client.py  make_audio_compatible.py  requirements.txt
docs/user/: api_setup.md  model_setup.md  user_doc.md
eval_dashboard/: app.py  requirements.txt
results/inputs/: 67d9f3adc1699d26e2d62f4b-AI for Inventory Management Outreach Campaign.query.txt
skills/: README.md
skills/aixplain-agent-builder/: README.md  SKILL.ar.md  SKILL.md
test/: conftest.py  test_base.py  test_client.py  test_datasets.py  test_files.py  test_models.py
tests/: __init__.py  asset_factory_test.py  benchmark_test.py  conftest.py  finetune_test.py  image_upload_e2e_test.py  image_upload_functional_test.py  image_upload_test.py  model_test.py  pipeline_test.py  test_deletion_utils.py  test_utils.py
(+1031 files in other folders)
