# aixplain/pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aixplain", "tests"]
namespaces = true

[project]
name = "aiXplain"
version = "0.2.21rc1"
description = "aiXplain SDK adds AI functions to software."
readme = "README.md"
requires-python = ">=3.5, <4"
license = { text = "Apache License, Version 2.0: http://www.apache.org/licenses/LICENSE-2.0" }
authors = [
  {email = "thiago.ferreira@aixplain.com"},
  {email = "krishna.durai@aixplain.com"},
  {email = "lucas.pavanelli@aixplain.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.1.0", 
    "tqdm>=4.1.0", 
    "pandas>=1.2.1", 
    "python-dotenv>=1.0.0", 
    "validators>=0.20.0", 
    "filetype>=1.2.0",
    "click>=7.1.2",
    "PyYAML>=6.0.1",
    "dataclasses-json>=0.5.2",
    "Jinja2==3.1.4",
]

[project.urls]
Homepage = "https://github.com/aixplain/aiXplain"
Documentation = "https://github.com/aixplain/pipelines/tree/main/docs"

[project.scripts]
aixplain = "aixplain.cli_groups:run_cli"

[project.optional-dependencies]
model-builder = [
    "model-interfaces~=0.0.1"
]
test = [
    "pytest>=6.1.0",
    "docker>=6.1.3",
    "requests-mock>=1.11.0"
]
