# aixplain/pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aixplain", "tests"]
namespaces = true

[project]
name = "aiXplain"
version = "0.2.40"
description = "aiXplain SDK adds AI functions to software."
readme = "README.md"
requires-python = ">=3.9, <4"
license = { text = "Apache License, Version 2.0: http://www.apache.org/licenses/LICENSE-2.0" }
authors = [
  {email = "ahmet@aixplain.com"},
  {email = "hadi@aixplain.com"},
  {email = "kadir.pekel@aixplain.com"},
  {email = "aina.abushaban@aixplain.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.1.0",
    "tqdm>=4.1.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "validators>=0.20.0",
    "filetype>=1.2.0",
    "click>=7.1.2",
    "PyYAML>=6.0.1",
    "dataclasses-json>=0.5.2",
    "Jinja2==3.1.6",
    "sentry-sdk>=1.0.0",
    "pydantic>=2.10.6",
    "filelock>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/aixplain/aiXplain"
Documentation = "https://github.com/aixplain/pipelines/tree/main/docs"

[project.scripts]
aixplain = "aixplain.cli_groups:run_cli"

[project.optional-dependencies]
model-builder = [
    "model-interfaces~=0.0.2"
]
test = [
    "pytest>=6.1.0",
    "docker>=6.1.3",
    "requests-mock>=1.11.0",
    "pytest-mock>=3.10.0",
    "pytest-rerunfailures>=16.0"
]
